<resources>
    <string name="app_name">EasyMobile</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_myaccount">my account</string>
    <string name="nav_item_prepaid">packages</string>
    <string name="nav_item_dataservices">data services</string>
    <string name="nav_item_stores">etisalat stores</string>
    <string name="nav_item_support">support</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_myaccount</item>
        <item>@string/nav_item_prepaid</item>
        <item>@string/nav_item_dataservices</item>
        <item>@string/nav_item_stores</item>
        <item>@string/nav_item_support</item>
    </string-array>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_myaccount">my account</string>
    <string name="title_prepaid">packages</string>
    <string name="title_dataservices">data services</string>
    <string name="title_migriation">migration</string>
    <string name="title_support">support</string>
    <string name="title_stores">etisalat stores</string>

    <string name="icon_data">&#xf080;</string>
    <string name="icon_phone">&#xf10b;</string>
    <string name="icon_dashboard">&#xf0e4;</string>
    <string name="icon_transfer">&#xf021;</string>
    <string name="icon_tablet">&#xf10a;</string>
    <string name="icon_basket">&#xf218;</string>
    <string name="icon_gift">&#xf06b;</string>
    <string name="icon_caret">&#xf0d7;</string>
    <string name="icon_voice">&#xf130;</string>
    <string name="icon_nonvoice">&#xf131;</string>
    <string name="icon_email">&#xf003;</string>
    <string name="icon_chat">&#xf0e6;</string>
    <string name="icon_facebook">&#xf09a;</string>
    <string name="icon_twitter">&#xf099;</string>
    <string name="icon_googleplus">&#xf0d5;</string>
    <string name="icon_add">&#xf055;</string>
    <string name="icon_trash">&#xf014;</string>
    <string name="icon_check">&#xf05d;</string>
    <string name="icon_cross">&#xf057;</string>
    <string name="icon_lock">&#xf23e;</string>
    <string name="icon_website">&#xf267;</string>
    <string name="icon_smiley">&#xf11a;</string>
    <string name="icon_signin">&#xf090;</string>
    <string name="icon_plus">&#xf067;</string>

    <string name="title_recharge">recharge account</string>
    <string name="title_transfer">airtime transfer</string>
    <string name="title_recharge_others">recharge others</string>
    <string name="title_databundles">buy data plans</string>
    <string name="title_data_transfer">data transfer</string>
    <string name="title_data_gifting">data gifting</string>

    <string name="nightnweekend">NIGHT &#38; WEEKEND\nN4,000</string>
    <string name="youandme">up to 5 YOU &#38; ME numbers</string>
    <string name="spinnerprompt">Please choose a dataplan</string>
    <string name="title_activity_disallow_fragment">DisallowFragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
