<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:orientation="horizontal"
        android:layout_weight="4" >

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            card_view:cardElevation="4dp"
            card_view:cardCornerRadius="0dp">

            <ImageView
                android:id="@+id/rechargeImg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/easyflex_inner"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:orientation="horizontal"
        android:layout_weight="3" >

        <FrameLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="4.5" >

            <Button
                android:id="@+id/easyflexAddBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|top"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:paddingTop="20dp"
                android:text="@string/icon_basket"
                android:textSize="70dp"
                android:textColor="@color/white"
                android:background="@drawable/button_green"
                android:onClick="buyEasyFlex" />

            <TextView
                android:id="@+id/easyflexAddText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|bottom"
                android:layout_margin="10dp"
                android:text="easyflex\nbundles"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold"
                android:elevation="100dp"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="5.5" >

            <Button
                android:id="@+id/easyflexDelBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right|bottom"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="4dp"
                android:paddingRight="20dp"
                android:paddingBottom="30dp"
                android:text="@string/icon_check"
                android:textSize="70dp"
                android:textColor="@color/white"
                android:background="@drawable/button_green"
                android:onClick="easyFlexCheckbundle" />

            <TextView
                android:id="@+id/easyflexDelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|bottom"
                android:layout_margin="10dp"
                android:text="check\nbundles"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold"
                android:elevation="100dp"/>

        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:orientation="horizontal"
        android:layout_weight="3" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"  >

            <Button
                android:id="@+id/easyflexCheckBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left|bottom"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:padding="40dp"
                android:text="@string/icon_cross"
                android:textSize="70dp"
                android:textColor="@color/white"
                android:background="@drawable/button_green"
                android:onClick="easyFlexCancelbundle" />

            <TextView
                android:id="@+id/easyflexCheckText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center"
                android:layout_margin="10dp"
                android:text="cancel\nbundle"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold"
                android:elevation="100dp"/>

        </FrameLayout>

    </LinearLayout>

</LinearLayout>